governance/baselines/3.0.0/references/22-carried-over-rules.md
---
rule_id: 22
title: 待办结转规则
category: 待办管控
risk_level: 中
depends_on: [00, 05, 06]
version: 1.0
---

# 22 待办结转规则（v2.1.0 新增）

## 1. 定位与边界

### 1.1 定位

本规则定义待办结转（carryover）完整机制：AI 为某个日期创建/更新待办文件前，必须先扫描未办结待办（及能耗链）并结转到当日，保证未办结任务与人员能耗不因日期切换而丢失。

- 本规则是 `00-pm-main-rules.md` §4c（硬阻断要点）与 WF-8 Step 0 的完整机制承载，AI 执行结转时按需读取本文件
- 结转标记落点：`todos/{date}/_index.md` §2（模板见 `assets/templates/daily-todo-binding-template.md`）
- 结转条目落点：`todos/{date}/{姓名}.md`（模板见 `assets/templates/personal-daily-todo-template.md`）

### 1.2 边界

- 结转只搬运未办结待办（状态 ≠ 已完成/已取消/已转出），不改写原文件历史条目
- 结转不产生新编号（同人结转编号不变，见 §5 编号硬约束）
- 结转不得修改待办的 WP Ref / 计划 Ref 归属
- 本规则不覆盖"换人（转交）"场景的重新分配决策（转交需 PM 指示，见 §5 场景对比）
- T+1 拷贝范围含 §0 / **§0.5 进出组记录** / **§0.6 能耗记录**（滚存快照：整段复制；§0.6 追加当日行）
- 空窗日（无未办结且无能耗投喂）不生成占位文件；滚存源 = 该人最新存在的文件
- 本包不代写他项目结转（见 Step 0.5）

## 2. 触发时机（3 时机）

| 时机 | 触发条件 | 动作 |
|---|---|---|
| 时机 0（日级完成检查） | AI 每次创建/更新待办文件时首先执行 | 检查今天 `todos/{date}/_index.md` 是否存在：存在且 `carryover_done_for_today=true` → 跳过 Step 0 直接执行 PM 指示；不存在或 `false` → 执行 Step 0 |
| 起链扩展（v3.0.0） | 有未办结待办 **或** 当日有能耗投喂 | 满足任一即纳入结转/生成对象。空窗日不生成占位文件 |
| 时机 1（状态表读取） | AI 开始为日期 D 创建/更新任何待办文件时（时机 0 未跳过） | 读取 `todos/{D-1}/_index.md` §2.3 每人独立结转状态表，逐行解析并输出"状态表读取确认"；缺失/格式错误按 §6 错误处理 |
| 时机 2（标记更新） | AI 完成所有人的结转操作后、写入任何新待办前 | 再次读取 §2.3 对比时机 1 快照，确认无并发修改后被修改则重新从时机 1 开始；未变则按 §4 顺序更新标记 |

## 3. Step 0 执行流程（增强算法）

1. **日级完成检查**（时机 0）：今天 `_index.md` 存在且 `carryover_done_for_today=true` → 跳过 Step 0
2. **读取前一天** `todos/{date-1}/_index.md`
3. **快速路径检查（历史）**：若昨天 `_index.md` 的 `carryover_traced_until` = `date-1` → 所有人历史已确认，只需扫描昨天一天；否则按每人独立状态确定扫描范围
4. **确定每个人的扫描范围（每人独立）**：
   - 状态 = `已确认`，最后确认日期 = D → 该人扫描范围 = D+1 到 `date-1`
   - 状态 = `待处理` 或 `失败` → 扫描范围 = `date-7` 到 `date-1`（回溯 7 天）
   - 不在状态表中（首次出现）→ 扫描范围 = `date-7` 到 `date-1`
   - 昨天 `_index.md` 不存在 → 从 `date-1` 向前找最近存在的 `_index.md`（最多 7 天）：找到按其状态表定范围；找不到则全员扫描范围 = `date-7` 到 `date-1`，并输出「⚠️ 最近 7 天无待办记录，无法执行结转检查，本次仅创建新待办」后继续
5. **逐日逐人扫描**（扫描范围内从早到晚）：
   - 该天 `_index.md` 存在且该人在参与人员列表：
     - 当天有待办文件 → 筛选状态 ≠ 已完成/已取消/已转出 的待办，有则在 `todos/{date}/{姓名}.md` 创建结转条目
     - 当天无待办文件（AI 漏建/请假）→ 从该天向前追溯最多 7 天找该人最近待办文件：找到则扫描未办结并结转；找不到则状态 = `失败`，备注「7 天内无待办文件」
   - 该天 `_index.md` 不存在（周末/假日）→ 跳过该天
6. **更新追溯标记**（每人独立）：
   - 结转成功 → 该人"最后确认日期" = `date-1`，状态 = `已确认`
   - 结转失败 → 状态 = `失败`，记录警告，不影响其他人
   - 全局标记：**所有人员**状态都为 `已确认` 时才更新 `carryover_traced_until` = `date-1`；任何人为 `失败`/`待处理` 则不更新
7. **输出结转报告**：每人扫描范围 + 结转了哪些人的哪些待办 + 失败/警告 + 更新后的每人状态表
8. **写入日级完成标记**：在 `todos/{date}/_index.md` 设置 `carryover_done_for_today=true`

> **语义澄清**：`carryover_done_for_today=true` 表示"今天的 Step 0 已执行完毕"，**不等于"所有人都成功结转"**。若某人状态为"失败/待处理"，日级标记仍为 `true`（今天不再重试），失败留待**明日 Step 0 再处理**。状态机中"失败→已确认"是跨天转换，AI 不得因日级标记=true 而误判为全员成功。

> **硬阻断**：Step 0 未完成前，禁止创建/写入任何待办文件。若 AI 跳过 Step 0 直接创建待办，视为严重违规，PM 应要求删除已创建文件并重新从 Step 0 执行。

> **滚存快照源（v3.0.0）**：拷贝 §0 / §0.5 / §0.6 时，源文件 = **该人最新存在的待办文件**（不限定前一日）。空窗日不生成任何占位文件；再有待办或投喂时从最新文件续接。补录历史能耗只改当日文件明细 + 累计按明细重算，**不回溯改写历史快照**。

### 3.1 Step 0.5 共享人力提示（v3.0.0，MANDATORY）

Step 0 之后、写入当日待办之前执行：

1. 读本项目 `resources/resource-register.md`「所属项目」列。
2. 若待结转人同时参与项目 **≥ 2**，**必须**提示：「该人还在其他项目，请到其各自 ai 分别结转」。
3. 读 `context/project-context.md`「兄弟项目」段，给出具体项目名 / ai 路径指针。
4. 本包只结转本项目待办与本项目 §0.5/§0.6；**禁止代写他项目**。

### 3.2 能耗滚存与停链（v3.0.0）

- **起链**：有未办结待办 **或** 当日有能耗投喂。滚存快照源 = **该人最新已存在文件**（不是「前一日」）；空窗日（无待办且无投喂）不生成占位文件。
- **停链**：§0.5 末行出组日期已落定 **且** 连续 7 天无投喂 → 停止为其生成文件。
- **再起链**：停链后再次有日报 / 待办 / 投喂 → 重新起链（§0.5 追加新行）。
- 能耗数值必须由 PM 投喂，AI 禁自行推算；无数据标「—」（见 01 号 §1.6）。

## 4. 标记更新顺序（不可颠倒）

1. 先更新每人独立状态表（`_index.md` §2.3）
2. 再检查是否所有人都是"已确认"
3. 若全是"已确认" → 更新全局标记 `carryover_traced_until`（§2.2）
4. 写入日级完成标记 `carryover_done_for_today=true`（§2.1）
5. 输出"标记更新确认"，示例：
   - "已更新状态表：赵东洋→已确认(08/18), 胡康利→失败(7天内无文件)"
   - "全局标记：未更新（胡康利状态为失败）"
   - "日级完成标记：已设置 carryover_done_for_today = true"

**禁止行为**：
- 禁止在结转操作完成前更新标记
- 禁止只更新部分人的标记（必须所有人一起更新）
- 禁止在写入新待办后才更新标记（必须在写入前更新）

## 5. 编号硬约束与场景区分

**结转条目格式**：
- **待办编号不变（硬约束）**：编号中的日期 = 原始安排日期，序号不变
  - 示例：`TD-朱宇杰-20260817-002` 结转到 08/18 后仍为 `TD-朱宇杰-20260817-002`
  - **禁止**将结转待办重新编号为今天的日期（如 `TD-朱宇杰-20260818-003`）
- 开始时间 = 当天日期；结束时间 = 原结束时间（若已超期则标注超期）
- 备注区标注"结转自 {原始日期}"（格式见 `personal-daily-todo-template.md` 备注区）

**场景对比（AI 必须区分）**：

| 场景 | 操作 | 编号规则 | 示例 |
|---|---|---|---|
| **结转（跨天）** | 同一人，任务从昨天延续到今天 | **编号不变** | `TD-朱宇杰-20260817-002` → 今天仍为 `TD-朱宇杰-20260817-002` |
| **换人（转交）** | 任务从张三转给李四 | **生成新编号 + 溯源链** | `TD-张三-20260817-001` → `TD-李四-20260818-001`，溯源：`TD-张三-20260817-001 → TD-李四-20260818-001` |
| **新建** | 全新任务 | **新编号** | `TD-朱宇杰-20260818-001` |

> **编号硬约束适用范围**："编号中的日期 = 原始安排日期"仅适用于**同人结转**场景。**换人（转交）是例外**：新编号中的日期 = 转交日期，溯源链记录原始编号。

## 6. 错误处理规则（E1~E5）

| 编号 | 异常 | 处理 |
|---|---|---|
| E1 | 状态表缺失（§2.3 不存在） | 输出「⚠️ {D-1} 状态表缺失，视为所有人状态=待处理，扫描范围=date-7 到 date-1」→ 继续执行 Step 0 → 在当天 `_index.md` 创建完整状态表（所有人初始状态=待处理） |
| E2 | 状态表格式错误（列数不匹配/状态值非法） | 输出「⚠️ {D-1} 状态表格式错误，视为所有人状态=待处理」→ 继续执行 Step 0 → 在当天 `_index.md` 重建状态表 |
| E3 | 状态表中某人缺失（在 §1 参与人员表中但不在 §2.3） | 输出「⚠️ {姓名} 不在状态表中，视为状态=待处理」→ 为该人执行结转 → 在状态表中新增该人行 |
| E4 | 状态表中某人多出（在 §2.3 但不在 §1 参与人员表中） | 输出「⚠️ {姓名} 在状态表中但不在参与人员表中，保留其状态，不执行结转」→ 该人状态保持不变 |
| E5 | 结转操作中途失败（如文件写入错误） | 输出「⚠️ {姓名} 结转操作失败，状态保持=待处理」→ 不更新该人标记 → 继续处理其他人 → 在结转报告中记录失败原因 |

## 7. 状态机（完整转换）

每人独立状态只有 3 种：

| 当前状态 | 触发条件 | 新状态 |
|---|---|---|
| 待处理 | 该人结转成功（找到文件+扫描未办结+写入结转） | 已确认 |
| 待处理 | 该人追溯失败（7 天内无文件） | 失败 |
| 已确认 | 该人今天不在参与人员列表中 | 保持已确认 |
| 已确认 | 该人今天有待办文件但无未办结项 | 已确认 |
| 失败 | PM 手动修复（补充了缺失的文件） | 待处理 |
| 失败 | AI 重新追溯成功（找到之前缺失的文件） | 已确认 |

**全局标记转换**：
- `carryover_traced_until` = "无" → 所有人状态都为"已确认" → 更新为 date-1
- `carryover_traced_until` = D → 所有人状态都为"已确认" → 更新为 date-1
- 若有任何人状态为"失败"或"待处理" → 不更新全局标记

## 8. AI 自检清单（Step 0 完成后必须输出）

```
✅ 状态表读取确认：已读取 {D-1} 状态表，共 N 人
✅ 结转执行确认：已为 M 人执行结转，K 人跳过（无未办结待办）
✅ 编号验证（硬约束）：所有结转待办编号保持不变（日期=原始安排日期，序号不变）
   - 示例：TD-朱宇杰-20260817-002 结转后仍为 TD-朱宇杰-20260817-002，不是 TD-朱宇杰-20260818-003
✅ 标记更新确认：已更新状态表，全局标记={已更新/未更新}
✅ 错误检查：无错误 / 发现 N 个错误（详见错误列表）
```

若任何一项自检失败 → 输出「⚠️ Step 0 自检未通过，请 PM 检查」。

## 9. 场景覆盖表

| 场景 | 全局标记 | 每人扫描范围 | 结果 |
|---|---|---|---|
| 正常工作日（昨天有 index，所有人已确认） | = `date-1` | 跳过 Step 0 | ✅ 快速路径 |
| 正常工作日（昨天有 index，部分人未确认） | < `date-1` | 每人按各自"最后确认日期"+1 扫描 | ✅ 只扫描未确认的人 |
| 周末后周一（昨天无 index） | < `date-1` | 向前找最近 index，每人按各自状态扫描 | ✅ 周五未办结结转 |
| AI 漏建某人昨天文件 | < `date-1` | 该人状态 = `失败`，扫描范围 = `date-7` 到昨天 | ✅ 该人未办结结转，不影响其他人 |
| 连续 3 天未交互 | < `date-1` | 向前找最近 index，每人按各自状态扫描 | ✅ 最近 index 的未办结结转 |
| 某人请假 5 天 | < `date-1` | 该人状态 = `待处理`，扫描范围 = `date-7` 到昨天 | ✅ 请假前未办结结转 |
| 首次使用（无任何 index） | 无 | 所有人扫描范围 = `date-7` 到昨天 | ⚠️ 输出提示，仅创建新待办 |

## 10. 禁止事项

- Step 0 未完成前不得创建/写入任何待办文件（硬阻断）
- 不得只处理 PM 提到的人员而跳过前一天 `_index.md` 全员扫描
- 不得将结转待办重新编号（同人结转编号不变）
- 不得在结转操作完成前更新任何标记
- 不得只更新部分人的标记
- 不得因日级标记 `carryover_done_for_today=true` 误判为全员结转成功
- 不得将状态为"失败"的人员静默忽略（必须输出警告并留待明日处理）
- 不得跳过 Step 0.5 共享人力提示（所属项目 ≥ 2 时必须提示到各项目 ai 分别结转）
- 不得在空窗日生成仅含滚存、无待办且无投喂的占位文件
- 不得自行推算 §0.6 能耗数值；不得漏拷贝 §0.5 / §0.6
